--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tauri-apps/api": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wouter": "^2.8.0-alpha.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.5",
